--- a/app/src/main/res/layout/fragment_register.xml
+++ b/app/src/main/res/layout/fragment_register.xml
@@ -1,105 +1,237 @@
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:layout_marginLeft="10dp"
-    android:layout_marginRight="10dp"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:orientation="vertical"
     tools:context="edumsg.edumsg_android_app.RegisterFragment"
-    android:background="@drawable/gradient_background">
+    android:orientation="vertical"
+    android:clickable="true"
+    android:focusable="true"
+    android:focusableInTouchMode="true"
+    android:background="@drawable/bg">
+    
+    <android.support.v7.widget.Toolbar
+        android:id="@+id/toolbar"
+        android:layout_width="match_parent"
+        android:layout_height="?attr/actionBarSize"
+        android:background="@color/colorToolbar"
+        android:elevation="4dp" />
 
-    <!--<TextView-->
-        <!--android:id="@+id/textView"-->
-        <!--android:layout_width="wrap_content"-->
+    <RelativeLayout
+        android:layout_below="@id/toolbar"
+        android:layout_marginTop="10dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerHorizontal="true">
+
+        <LinearLayout
+            android:id="@+id/username_layout"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            android:layout_centerHorizontal="true"
+            android:layout_marginBottom="10dp">
+
+            <ImageView
+                android:layout_width="35dp"
+                android:layout_height="35dp"
+                android:layout_marginRight="10dp"
+                android:src="@drawable/ic_person_outline_black_24dp"/>
+
+            <EditText
+                android:id="@+id/username"
+                android:layout_width="255dp"
+                android:layout_height="wrap_content"
+                android:background="@null"
+                android:drawableBottom="@drawable/line"
+                android:drawablePadding="15dp"
+                android:maxLines="1"
+                android:inputType="textVisiblePassword"
+                android:singleLine="true"
+                android:layout_marginTop="7dp"
+                android:layout_marginBottom="10dp"
+                android:imeOptions="actionNext"
+                android:hint="@string/prompt_username"/>
+
+        </LinearLayout>
+
+        <LinearLayout
+            android:id="@+id/pass_layout"
+            android:layout_below="@id/username_layout"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            android:layout_centerHorizontal="true">
+
+            <ImageView
+                android:layout_width="35dp"
+                android:layout_height="35dp"
+                android:layout_marginRight="10dp"
+                android:src="@drawable/ic_lock_outline_black_24dp"/>
+
+            <EditText
+                android:id="@+id/password"
+                android:layout_width="255dp"
+                android:layout_height="wrap_content"
+                android:background="@null"
+                android:drawableBottom="@drawable/line"
+                android:drawablePadding="15dp"
+                android:inputType="textPassword"
+                android:maxLines="1"
+                android:singleLine="true"
+                android:layout_marginTop="7dp"
+                android:layout_marginBottom="25dp"
+                android:imeOptions="actionDone"
+                android:hint="@string/prompt_password"/>
+
+        </LinearLayout>
+
+        <LinearLayout
+            android:id="@+id/email_layout"
+            android:layout_below="@id/pass_layout"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            android:layout_centerHorizontal="true">
+
+            <ImageView
+                android:layout_width="35dp"
+                android:layout_height="35dp"
+                android:layout_marginRight="10dp"
+                android:src="@drawable/ic_mail_outline_black_24dp"/>
+
+            <EditText
+                android:id="@+id/email"
+                android:layout_width="255dp"
+                android:layout_height="wrap_content"
+                android:background="@null"
+                android:drawableBottom="@drawable/line"
+                android:drawablePadding="15dp"
+                android:inputType="textEmailAddress"
+                android:maxLines="1"
+                android:singleLine="true"
+                android:layout_marginTop="7dp"
+                android:layout_marginBottom="25dp"
+                android:imeOptions="actionDone"
+                android:hint="@string/prompt_email"/>
+
+        </LinearLayout>
+
+        <LinearLayout
+            android:id="@+id/name_layout"
+            android:layout_below="@id/email_layout"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            android:layout_centerHorizontal="true"
+            android:layout_marginBottom="20dp">
+
+            <ImageView
+                android:layout_width="35dp"
+                android:layout_height="35dp"
+                android:layout_marginRight="10dp"
+                android:src="@drawable/ic_face_black_24dp"/>
+
+            <EditText
+                android:id="@+id/name"
+                android:layout_width="255dp"
+                android:layout_height="wrap_content"
+                android:background="@null"
+                android:drawableBottom="@drawable/line"
+                android:drawablePadding="15dp"
+                android:inputType="textVisiblePassword"
+                android:maxLines="1"
+                android:singleLine="true"
+                android:layout_marginTop="7dp"
+                android:layout_marginBottom="25dp"
+                android:imeOptions="actionDone"
+                android:hint="@string/prompt_name"/>
+
+        </LinearLayout>
+
+        <Button
+            android:id="@+id/register_button"
+            android:layout_below="@id/name_layout"
+            android:layout_width="300dp"
+            android:layout_height="48.38dp"
+            android:layout_centerHorizontal="true"
+            android:background="@drawable/register" />
+
+    </RelativeLayout>
+
+    <!--<com.beardedhen.androidbootstrap.BootstrapEditText-->
+        <!--android:id="@+id/email"-->
+        <!--android:layout_width="match_parent"-->
         <!--android:layout_height="wrap_content"-->
-        <!--android:layout_centerInParent="true"-->
+        <!--android:layout_marginRight="10dp"-->
+        <!--android:layout_marginLeft="10dp"-->
+        <!--android:hint="@string/prompt_email"-->
+        <!--android:inputType="textEmailAddress"-->
+        <!--android:maxLines="1"-->
+        <!--android:singleLine="true"-->
+        <!--android:textColor="@color/colorPrimaryDark"-->
+        <!--android:drawableLeft="@drawable/ic_mail_24dp"-->
+        <!--app:roundedCorners="true"-->
+        <!--android:drawablePadding="4dp"/>-->
+
+    <!--<com.beardedhen.androidbootstrap.BootstrapEditText-->
+        <!--android:id="@+id/username"-->
+        <!--android:layout_width="match_parent"-->
+        <!--android:layout_height="wrap_content"-->
+        <!--android:layout_marginRight="10dp"-->
+        <!--android:layout_marginLeft="10dp"-->
+        <!--android:hint="@string/prompt_username"-->
+        <!--app:roundedCorners="true"-->
+        <!--android:inputType="text"-->
+        <!--android:maxLines="1"-->
+        <!--android:singleLine="true"-->
+        <!--android:textColor="@color/colorPrimaryDark"-->
+        <!--android:drawableLeft="@drawable/ic_account_circle_24dp"-->
+        <!--android:drawablePadding="4dp" />-->
+
+    <!--<com.beardedhen.androidbootstrap.BootstrapEditText-->
+        <!--android:id="@+id/password"-->
+        <!--android:layout_width="match_parent"-->
+        <!--android:layout_height="wrap_content"-->
+        <!--android:layout_marginRight="10dp"-->
+        <!--android:layout_marginLeft="10dp"-->
+        <!--android:hint="@string/prompt_password"-->
+        <!--android:inputType="textPassword"-->
+        <!--android:maxLines="1"-->
+        <!--app:roundedCorners="true"-->
+        <!--android:singleLine="true"-->
+        <!--android:textColor="@color/colorPrimaryDark"-->
+        <!--android:drawableLeft="@drawable/ic_vpn_key_24dp"-->
+        <!--android:drawablePadding="4dp" />-->
+
+    <!--<com.beardedhen.androidbootstrap.BootstrapEditText-->
+        <!--android:id="@+id/name"-->
+        <!--android:layout_width="match_parent"-->
+        <!--android:layout_height="wrap_content"-->
+        <!--android:layout_marginBottom="10dp"-->
+        <!--android:layout_marginRight="10dp"-->
+        <!--android:layout_marginLeft="10dp"-->
+        <!--android:hint="@string/prompt_name"-->
+        <!--app:roundedCorners="true"-->
+        <!--android:inputType="text"-->
+        <!--android:maxLines="1"-->
+        <!--android:singleLine="true"-->
+        <!--android:textColor="@color/colorPrimaryDark"-->
+        <!--android:drawableLeft="@drawable/ic_accessibility_24dp"-->
+        <!--android:drawablePadding="4dp" />-->
+
+    <!--<com.beardedhen.androidbootstrap.BootstrapButton-->
+        <!--android:id="@+id/register_button"-->
+        <!--style="?android:textAppearanceSmall"-->
+        <!--android:layout_width="match_parent"-->
+        <!--android:layout_height="40dp"-->
+        <!--android:layout_marginLeft="10dp"-->
+        <!--android:layout_marginRight="10dp"-->
         <!--android:text="@string/action_register"-->
-        <!--android:textAppearance="?android:attr/textAppearanceLarge"/>-->
+        <!--android:layout_marginBottom="80dp"-->
+        <!--app:bootstrapBrand="primary"-->
+        <!--app:bootstrapSize="md"-->
+        <!--app:buttonMode="regular"-->
+        <!--app:roundedCorners="true"-->
+        <!--android:textStyle="bold" />-->
 
-    <ImageView
-        android:layout_width="223dp"
-        android:layout_height="53dp"
-        android:layout_marginTop="20dp"
-        android:layout_marginBottom="20dp"
-        android:id="@+id/imageView"
-        android:layout_gravity="center_horizontal"
-        android:src="@drawable/logo_placeholder" />
-
-    <com.beardedhen.androidbootstrap.BootstrapEditText
-        android:id="@+id/email"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginRight="10dp"
-        android:layout_marginLeft="10dp"
-        android:hint="@string/prompt_email"
-        android:inputType="textEmailAddress"
-        android:maxLines="1"
-        android:singleLine="true"
-        android:textColor="@color/colorPrimaryDark"
-        android:drawableLeft="@drawable/ic_mail_24dp"
-        app:roundedCorners="true"
-        android:drawablePadding="4dp"/>
-
-    <com.beardedhen.androidbootstrap.BootstrapEditText
-        android:id="@+id/username"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginRight="10dp"
-        android:layout_marginLeft="10dp"
-        android:hint="@string/prompt_username"
-        app:roundedCorners="true"
-        android:inputType="text"
-        android:maxLines="1"
-        android:singleLine="true"
-        android:textColor="@color/colorPrimaryDark"
-        android:drawableLeft="@drawable/ic_account_circle_24dp"
-        android:drawablePadding="4dp" />
-
-    <com.beardedhen.androidbootstrap.BootstrapEditText
-        android:id="@+id/password"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginRight="10dp"
-        android:layout_marginLeft="10dp"
-        android:hint="@string/prompt_password"
-        android:inputType="textPassword"
-        android:maxLines="1"
-        app:roundedCorners="true"
-        android:singleLine="true"
-        android:textColor="@color/colorPrimaryDark"
-        android:drawableLeft="@drawable/ic_vpn_key_24dp"
-        android:drawablePadding="4dp" />
-
-    <com.beardedhen.androidbootstrap.BootstrapEditText
-        android:id="@+id/name"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="10dp"
-        android:layout_marginRight="10dp"
-        android:layout_marginLeft="10dp"
-        android:hint="@string/prompt_name"
-        app:roundedCorners="true"
-        android:inputType="text"
-        android:maxLines="1"
-        android:singleLine="true"
-        android:textColor="@color/colorPrimaryDark"
-        android:drawableLeft="@drawable/ic_accessibility_24dp"
-        android:drawablePadding="4dp" />
-
-    <com.beardedhen.androidbootstrap.BootstrapButton
-        android:id="@+id/register_button"
-        style="?android:textAppearanceSmall"
-        android:layout_width="match_parent"
-        android:layout_height="40dp"
-        android:layout_marginLeft="10dp"
-        android:layout_marginRight="10dp"
-        android:text="@string/action_register"
-        android:layout_marginBottom="80dp"
-        app:bootstrapBrand="primary"
-        app:bootstrapSize="md"
-        app:buttonMode="regular"
-        app:roundedCorners="true"
-        android:textStyle="bold" />
-
-</LinearLayout>
+</RelativeLayout>
