--- a/app/src/main/res/layout/chat_received_msg.xml
+++ b/app/src/main/res/layout/chat_received_msg.xml
@@ -4,8 +4,8 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:paddingBottom="5dp"
-
-    android:paddingTop="5dp">
+    android:paddingTop="5dp"
+    android:layout_marginLeft="5dp">
 
     <RelativeLayout
         android:layout_width="wrap_content"  android:background="@drawable/balloon_incoming_normal"
