--- a/app/src/main/res/layout/chat_sent_msg.xml
+++ b/app/src/main/res/layout/chat_sent_msg.xml
@@ -3,6 +3,7 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
+    android:layout_marginRight="5dp"
     android:paddingBottom="5dp"
     android:paddingTop="5dp">
 
