--- a/app/src/main/res/layout/replies_view.xml
+++ b/app/src/main/res/layout/replies_view.xml
@@ -199,10 +199,12 @@
         android:id="@+id/show_more_replies"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Show more"
+        android:background="@color/colorPrimary"
+        android:text="@string/show_more"
         android:layout_marginTop="25dp"
+        android:textColor="#FFFFFF"
         android:layout_below="@id/replyLayout3"
-        android:layout_centerInParent="true"
+        android:layout_marginLeft="90dp"
         android:visibility="gone" />
 
 </RelativeLayout>
