--- a/app/src/main/res/layout/tweets_rv.xml
+++ b/app/src/main/res/layout/tweets_rv.xml
@@ -1,17 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent" android:layout_height="wrap_content">
 
     <ImageView
         android:layout_width="70dp"
         android:layout_height="70dp"
+        android:layout_marginTop="20dp"
+        android:layout_alignTop="@+id/tweet_blur_layout"
         android:id="@+id/user_image" />
 
-    <LinearLayout
-        android:layout_width="match_parent"
+    <com.daimajia.androidviewhover.BlurLayout
+        android:id="@+id/tweet_blur_layout"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:orientation="vertical"
-        android:id="@+id/tweet_layout"
         android:layout_alignParentTop="true"
         android:layout_toRightOf="@+id/user_image"
         android:layout_toEndOf="@+id/user_image">
@@ -21,49 +23,23 @@
             android:layout_height="wrap_content"
             android:id="@+id/creator_info"
             android:textColor="#000000"
+            android:layout_marginTop="10dp"
             android:textStyle="bold" />
 
         <TextView
             android:layout_width="match_parent"
             android:layout_height="70dp"
+            android:layout_marginTop="10dp"
+            android:layout_below="@id/creator_info"
             android:id="@+id/tweet" />
 
-    </LinearLayout>
-
-    <ImageButton
-        android:id="@+id/retweet_button"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginRight="40dp"
-        android:src="@drawable/ic_retweet_24dp"
-        android:layout_below="@id/tweet_layout"
-        android:layout_alignLeft="@id/tweet_layout"
-        android:background="@null"/>
-
-    <ImageButton
-        android:id="@+id/reply_button"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginRight="40dp"
-        android:src="@drawable/ic_reply_24dp"
-        android:layout_below="@id/tweet_layout"
-        android:layout_toRightOf="@id/retweet_button"
-        android:background="@null"/>
-
-    <ImageButton
-        android:id="@+id/favorite_button"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:src="@drawable/ic_favorite_24dp"
-        android:layout_below="@id/tweet_layout"
-        android:layout_toRightOf="@id/reply_button"
-        android:background="@null"/>
+    </com.daimajia.androidviewhover.BlurLayout>
 
     <ProgressBar
         android:id="@+id/replies_progress"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@id/retweet_button"
+        android:layout_below="@id/tweet_blur_layout"
         android:layout_centerHorizontal="true"
         android:visibility="gone"/>
 
@@ -72,7 +48,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:visibility="gone"
-        android:layout_below="@id/retweet_button"
-        android:layout_alignStart="@id/tweet_layout"
-        android:layout_alignLeft="@id/tweet_layout"/>
+        android:layout_below="@id/tweet_blur_layout"
+        android:layout_alignStart="@id/tweet_blur_layout"
+        android:layout_alignLeft="@id/tweet_blur_layout"/>
 </RelativeLayout>
