--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#64B5F6</color>
+    <color name="colorPrimary">#5856d6</color>
     <color name="colorPrimaryDark">#263238</color>
     <color name="colorAccent">#F44336</color>
-    <color name="colorToolbar">#076391</color>
+    <color name="colorToolbar">#5FBFF9</color>
 </resources>
